# seppef

./: .gitmodules  LICENSE  Makefile  README
code/: CMakeLists.txt
code/cmake/: FindFFTW.cmake
code/docker/: .Dockerfile.centos7.swo  .Dockerfile.centos7.swp  Dockerfile.centos7
code/include/base/: complexHyperExt.h  doubleHyperExt.h  floatHyperExt.h  functions.h  pef2D.h  plotting.h  varPef2D.h
code/include/operators/: adjointOper2D.h  chainOper2D.h  convolution2D.h  expNsPef2D.h  expVarConv2D.h  fkTransform.h  fxTransform.h  identity1D.h  identity2D.h  matrixMult.h  nsPef2D.h  oper.h  oper1D.h  oper2D.h  scaleAddOper2D.h  selection2D.h  varConv2D.h  varDatConv2D.h  weighting2D.h  zeroPhaseFiltering2D.h
code/include/solvers/: cgls.h  cglsReg.h  cglsSuper.h  lsolver.h  lsolverReg.h  sdls.h
code/python/: grey.py  pyPlot1D.py  pyPlot2D.py  pyPlot3D.py  seppyio.py
code/src/: CMakeLists.txt
code/src/base/: complexHyperExt.cpp  doubleHyperExt.cpp  floatHyperExt.cpp  functions.cpp  pef2D.cpp  varPef2D.cpp
code/src/main/: convolve2D.cpp  cut.cpp  diverge.cpp  duplicate.cpp  estimate_pef.cpp  estimate_var_pef.cpp  expand.cpp  filter.cpp  fk_2_fv.cpp  fk_filter.cpp  fk_spectrum.cpp  fx_spectrum.cpp  generate_hyperbolic_wave.cpp  generate_monochromatic_wave.cpp  generate_plane_wave.cpp  generate_random_noise.cpp  generate_spike.cpp  generate_wavelet.cpp  main.cpp  pad.cpp  pef_lf_den_v1.cpp  pef_lf_den_v2.cpp  pef_lf_den_v3.cpp  plot1d.cpp  plot2d.cpp  resamp.cpp  solve_Pexpvar_reg_Pvar.cpp  solve_Pvar_reg_Pexpvar.cpp  solve_conv.cpp  solve_conv_mask.cpp  solve_conv_reg_Pexpvar.cpp  solve_conv_reg_Pvar.cpp  solve_conv_reg_identity.cpp  solve_exp_ns_pef.cpp  solve_exp_var_conv.cpp  solve_ns_pef.cpp  solve_var_conv.cpp  stat.cpp  transpose.cpp
code/src/operators/: convolution2D.cpp  expNsPef2D.cpp  expVarConv2D.cpp  fkTransform.cpp  fxTransform.cpp  identity1D.cpp  identity2D.cpp  matrixMult.cpp  nsPef2D.cpp  oper1D.cpp  oper2D.cpp  selection2D.cpp  varConv2D.cpp  varDatConv2D.cpp  weighting2D.cpp  zeroPhaseFiltering2D.cpp
code/src/solvers/: cgls.cpp  cglsReg.cpp  cglsSuper.cpp  lsolver.cpp  lsolverReg.cpp  sdls.cpp
